--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <meta name="theme-color" content="#007DC5" />
 
-    <title>Crednosso | Lojista</title>
+    <title>Sistema | Lojista</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
